k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kpz-backend-service
spec:
  type: ClusterIP
  selector:
    app: kpz-backend
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
